language/move-compiler/tests/move_check/parser/constant_native.exp
error[E01003]: invalid modifier
  ┌─ tests/move_check/parser/constant_native.move:3:5
  │
3 │     native const Foo: u64 = 0;
  │     ^^^^^^^^^^^^ Invalid constant declaration. Modifiers 'public', 'native', 'entry' are not supported for constant.

